
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coffeepy"
version = "0.1.7"
authors = [
  { name="kuvaus", email="coffeepy@kuvaus.org" },
]
description = "Coffeepy prevents the system from sleeping"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
coffeepy = "coffeepy.coffeepy:run"

[project.urls]
"Homepage" = "https://github.com/kuvaus/coffeepy"
"Bug Tracker" = "https://github.com/kuvaus/coffeepy/issues"

