
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coffeepy"
version = "0.2.0"
authors = [
  { name="kuvaus", email="coffeepy@kuvaus.org" },
]
dependencies = [
    "jeepney;sys_platform=='linux'"
]
description = "Coffeepy prevents the system from sleeping"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
coffeepy = "coffeepy.coffeepy:run"

[project.urls]
"Homepage" = "https://github.com/kuvaus/coffeepy"
"Bug Tracker" = "https://github.com/kuvaus/coffeepy/issues"


